# AI4All

./: .bash_history  .claude.json  .env.example  .gitignore  30DAY_ROLLING_WINDOW.md  CANARY_EXCLUSION_FROM_REWARDS.md  CANARY_SYSTEM.md  CRITICAL_CORRECTIONS.md  DOCUMENTATION_CHECKLIST.md  Dockerfile  FINAL_VERIFICATION.md  FIXED_POINT_ARITHMETIC.md  IMPLEMENTATION_SUMMARY.md  MILESTONE1_24H_BLOCK_ENHANCEMENT.md  MILESTONE2B_CODE_REVIEW.md  MILESTONE3_CODE_REVIEW.md  PERFORMANCE_POOL.md  README.md  build.bat  docker-compose.yml  initialise.bat  instruct.md  jest.config.js  package.json  start.bat  tsconfig.json
.claude/: settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.swarm/: memory.db  schema.sql  state.json
__mocks__/@openforge-sh/: liboqs.ts
docker/: entrypoint.sh
docs/: BLOCK_ASSIGNMENT_SYSTEM.md  CANARY_SYSTEM.md  P2P_WORKER_COMMUNICATION.md  PERFORMANCE_POOL.md  REHABILITATION_SYSTEM.md  TESTING.md
scripts/: create-wallet.ts  generate-coins.ts  keygen.mjs  run-blockchain.ts  tsconfig.json  wallet-setup.ts
src/: blockAssignment.test.ts  blockAssignment.ts  canaryGenerator.test.ts  canaryGenerator.ts  computePoints.test.ts  computePoints.ts  dynamicCanary.test.ts  fixedPoint.test.ts  fixedPoint.ts  rewardDistribution.test.ts  rewardDistribution.ts  rewardDistributionFixed.test.ts  rewardDistributionFixed.ts  types.ts
src/api/: app.ts  auth.ts  index.ts  restore.ts  scheduler.ts  server.ts  state.ts  types.ts
src/chain/: chainBuilder.ts  index.ts  types.ts
src/crypto/: address.ts  index.ts  keys.ts  signing.ts
src/governance/: types.ts
src/merkle/: index.ts  merkleTree.ts  rewardCommitment.ts
src/persistence/: canonicalSerialize.ts  eventBuilder.ts  eventTypes.ts  inMemoryStores.ts  index.ts  interfaces.ts  persistDay.ts  replayRunner.ts  stateProjection.ts  stateSerializer.ts
src/services/: auditService.test.ts  auditService.ts  dailyFinalizeService.test.ts  dailyFinalizeService.ts  dayLifecycleService.ts  index.ts  (+9 more)
wallets/: wallet-1.identity.json  wallet-2.identity.json  wallet-3.identity.json  wallet-4.identity.json
worker/: .gitignore  Cargo.toml  build.rs  check.bat  config.example.toml
worker/.github/workflows/: ci.yml  release.yml
worker/config/: default.toml
worker/config/personas/: coder.toml  master-ba.toml  project-ba.toml  tester.toml
worker/src/: cli.rs  config.rs  crawler.rs  error.rs  logging.rs  main.rs  pairing.rs  version.rs
worker/src/backend/: cpu.rs  crawler.rs  mock.rs  mod.rs  openai.rs  registry.rs  traits.rs  vulkan.rs
worker/src/coordinator/: client.rs  mod.rs
worker/src/executor/: mod.rs  runner.rs  state.rs
worker/src/gpu/: detect.rs  mod.rs
worker/src/peer/: groups.rs  mesh.rs  mod.rs  registry.rs
worker/src/persona/: manager.rs  mod.rs  registry.rs  types.rs
worker/src/plugins/: manager.rs  mod.rs  registry.rs
worker/src/protocol/: messages.rs  mod.rs  version.rs
worker/src/system/: benchmark.rs  health.rs  mod.rs
worker/src/types/: mod.rs  model.rs  task.rs
worker/tests/: cli_tests.rs  config_tests.rs  integration_coordinator.rs  integration_tests.rs
worker/tests/common/: mod.rs
worker/tests/fixtures/: invalid_config.toml  valid_config.toml
(+48 files in other folders)
